# HandsOn

./: .gitignore  README.md  final_class.cpp  memory.cpp  pointer_class_members.cpp  virtual_destructor.cpp
2024/inc/: h_tree.h  string_parse.h
2024/src/: appProp.json  h_tree.c  proxy.cpp  string_parse.c  string_parse_proto.cpp  study_0723.cpp
C++-Software-Design/: README.md
C++-Software-Design/src/: chapter_10_singleton.cpp  chapter_4_acyclic_visitor.cpp  chapter_4_visitor.cpp  chapter_5_command.cpp  chapter_5_strategy.cpp  chapter_6_CRTP.cpp  chapter_6_adapter.cpp  chapter_6_observer.cpp  chapter_6_observer2.cpp  chapter_7_bridge.cpp  chapter_7_bridge2.cpp  chapter_7_external_polymorphism.cpp  chapter_7_prototype.cpp  chapter_8_type_erasure.cpp  chapter_9_decorator.cpp  chapter_9_decorator2.cpp  chapter_9_decorator3.cpp
Effective-Modern-C++/: README.md
Effective-Modern-C++/src/: chapter_1_type_inference.cpp  chapter_1_type_inference_auto.cpp  chapter_1_type_inference_decltype.cpp  chapter_1_type_inference_typeid.cpp  chapter_2_auto.cpp  chapter_2_auto_ETII.cpp  chapter_3_modern_c++.cpp  chapter_3_modern_c++_const.cpp  chapter_3_modern_c++_const_iterator.cpp  chapter_3_modern_c++_constexpr.cpp  chapter_3_modern_c++_delete.cpp  chapter_3_modern_c++_enum.cpp  chapter_3_modern_c++_noexcept.cpp  chapter_3_modern_c++_nullptr.cpp  chapter_3_modern_c++_override.cpp  chapter_3_modern_c++_special_member_function.cpp  chapter_3_modern_c++_using_alias.cpp  chapter_4_smart_pointer.cpp  chapter_4_smart_pointer_make.cpp  chapter_4_smart_pointer_pimpl.cpp  chapter_4_smart_pointer_shared_ptr.cpp  chapter_4_smart_pointer_weak_ptr.cpp  chapter_5_move_forward.cpp  chapter_5_move_forward_24.cpp  chapter_5_move_forward_25.cpp  chapter_5_move_forward_26.cpp  chapter_5_move_forward_27.cpp  chapter_5_move_forward_28.cpp  chapter_5_move_forward_29.cpp  chapter_5_move_forward_30.txt  chapter_6_lambda_31.cpp  chapter_6_lambda_32.cpp  chapter_6_lambda_33.cpp  chapter_6_lambda_34.cpp  chapter_7_concurrency_35.cpp  chapter_7_concurrency_38.cpp  chapter_7_concurrency_40.cpp  coffee_break_concurrency.cpp  coffee_break_orm.cpp
Head-First/src/: chapter_1.cpp  chapter_10_state.cpp  chapter_11_proxy.cpp  chapter_11b_proxy.cpp  chapter_12_compound.cpp  chapter_13_design_patterns.txt  chapter_2_observer.cpp  chapter_3_decorator.cpp  chapter_4_factory.cpp  chapter_6_command.cpp  chapter_7_adapter_facade.cpp  chapter_7_facade.cpp  chapter_8_template_method.cpp  chapter_9_composite.cpp  chapter_9_iterator.cpp
ORM-Cheshire/: README.md
ORM-Cheshire/inc/: AppProp.hpp  ConnectionPool.hpp  DataField.hpp  Debug.hpp  Exception.hpp  MySQLConnection.hpp  MySQLCreateStrategy.hpp  MySQLDeleteStrategy.hpp  MySQLDriver.hpp  MySQLReadStrategy.hpp  MySQLTx.hpp  MySQLUpdateStrategy.hpp  MySQLXCreateStrategy.hpp  MySQLXTx.hpp  PersonData.hpp  PersonRepository.hpp  PersonStrategy.hpp  RdbConnection.hpp  RdbData.hpp  RdbDataStrategy.hpp  RdbDriver.hpp  RdbProcStrategy.hpp  RdbStrategy.hpp  RdbTransaction.hpp  Repository.hpp  sql_generator.hpp  test_1.hpp
ORM-Cheshire/src/: Makefile  appProp.json  main.cpp  sql_generator.cpp
ORM-Cheshire/src/connection/: MySQLConnection.cpp
ORM-Cheshire/src/data/: DataField.cpp  PersonData.cpp
ORM-Cheshire/src/driver/: MySQLDriver.cpp
ORM-Cheshire/src/model/: PersonStrategy.cpp
ORM-Cheshire/src/repository/: PersonRepository.cpp
ORM-Cheshire/src/test/: test_1.cpp
generic_repo_cxx/: .gitignore  CMakeLists.txt  README.md
generic_repo_cxx/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  mongo_template_test_runner  mysql_template_test_runner  object_pool_test_runner
generic_repo_cxx/inc/: ObjectPool.hpp  Repository.hpp  mongo_template.hpp  mysql_template.hpp  pqxx_template.hpp  sql_helper.hpp
generic_repo_cxx/src/: mongo_template_test.cpp  mysql_template_test.cpp  object_pool_test.cpp  pqxx_template_test.cpp  study_mysql.cpp  study_pqxx.cpp
inc/: Circle.hpp  Exception.hpp  ObjectPool.hpp  Repository.hpp  Shape.hpp  sql_helper.hpp
src/: Adapter.cpp  Circle.cpp  Command.cpp  Decorator.cpp  Filter.cpp  builder_template.cpp  builder_template_m.cpp  cast.cpp  cli.cpp  cli_file.cpp  cols_vals_multi_pointer.cpp  container_algorithm.cpp  copy-constructor.cpp  error_handling.cpp  fcgi_hello_world.cpp  final_class.cpp  function_object.cpp  function_template.cpp  gof-bridge.cpp  gof-builder.cpp  gof-chain_of_responsibility.cpp  gof-command.cpp  gof-facade.cpp  gof-factory-method.cpp  gof-flyweight.cpp  gof-interpreter.cpp  gof-mediator.cpp  gof-memento.cpp  gof-observer.cpp  gof-prototype.cpp  gof-proxy.cpp  gof-state.cpp  gof-visitor.cpp  handson_b.cpp  hello.c  interest_20231218.cpp  json.cpp  lambda_expr.cpp  mongodb_quickstart.cpp  move_semantics.cpp  (+17 more)
